added custom data folder selection

--- a/FileBackupByGigginoCorp/FileBackupByGigginoCorp.csproj
+++ b/FileBackupByGigginoCorp/FileBackupByGigginoCorp.csproj
@@ -61,7 +61,7 @@
     <ManifestKeyFile>FileBackupByGigginoCorp_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>false</GenerateManifests>
+    <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -70,7 +70,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>false</SignManifests>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>FileBackup.Program</StartupObject>
